using Boolean.valueOf instead of constructor
git-svn-id: https://svn.apache.org/repos/asf/incubator/lenya/trunk@43222 13f79535-47bb-0310-9956-ffa450edef68